# snipe

./: .gitignore  404.html  README.md  index.html  objects.inv  pixi.toml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: CI.yaml  release.yaml
CLI_Ops/: index.html
CLI_QC/: index.html
CLI_Sketch/: index.html
ReferenceQC/: index.html
Sketch/: index.html
SnipeSig/: index.html
cli/: index.html
docs/: mkdocs.yml
docs/docs/: CLI_Ops.md  CLI_QC.md  CLI_Sketch.md  ReferenceQC.md  Sketch.md  SnipeSig.md  cli.md  index.md
docs/stylesheets/: extra.css
search/: search_index.json
snipe/: __init__.py  cli.py
snipe/src/: api.py
snipe/src/models/: signature.py  table.py
src/snipe/: __init__.py
src/snipe/api/: __init__.py  analyze.py  api.py  enums.py  multisig_reference_QC.py  reference_QC.py  sketch.py  snipe_sig.py
src/snipe/cli/: cli.py  cli_ops.py  cli_qc.py  cli_qc_parallel.py  cli_sketch.py  main.py
tests/api/: test_api.py  test_reference_qc.py
