[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "snipe"
version = "0.1.0"
description = "lightweight, fast, accurate estimator for basic sequence alignment metrics and more."
authors = [
    "Mohamed Abuelanin <mabuelanin@gmail.com>",
    "Tamer A. Mansour <drtamermansour@gmail.com>"
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "snipe" }
]

[tool.poetry.dependencies]
python = "^3.12"
sourmash = "^4.8.7"
tqdm = "^4.66.2"
numpy = "^1.26.4"
pandas = "^2.2.1"
jax = "^0.4.25"
click = "^8.1.7"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"

[tool.poetry.scripts]
snipe = 'snipe.cli:cli'

# Conda build configuration (managed separately)
[tool.pixi.project]
name = "snipe"
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]

# Pixi tasks for development activities
[tool.pixi.tasks]
fmt = "ruff format"
lint = "ruff check --fix"
test = "pytest tests"

# Pixi dependencies mirrored to match Poetry but in Conda format
[tool.pixi.dependencies]
python = ">=3.12"
sourmash = ">=4.8.7"
tqdm = ">=4.66.2"
numpy = ">=1.26.4"
pandas = ">=2.2.1"
jax = ">=0.4.25,<0.5"
click = ">=8.1.7"
jaxlib = ">=0.4.23,<0.5"
pytest = ">=8.1.1,<8.2"
nodejs = ">=20.9.0,<20.10"
