[build-system]
requires = ["hatchling", "hatch-conda-build"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.conda]
channels = ["conda-forge", "bioconda"]
requirements = ["python", "pip", "hatchling", "hatch-conda-build"]

[project]
name = "snipe"
dynamic = ["version"]
description = "SRA-Scale sequence quality control"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "AGPL" }
authors = [
    { name = "Mohamed Abuelanin", email = "mabuelanin@gmail.com" },
    { name = "Tamer Mansour", email = "drtamermansour@gmail.com" },
]
maintainers = [{ name = "Mohamed Abuelanin", email = "mabuelanin@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
keywords = ["API", "CLI", "tool", "snipe"]
dependencies = [
    "requests>=2.25.1",
    "click>=8.1.7",
    "sourmash>=4.8.11",
    "pytest>=8.3.3",
    "numpy",
    "pyfastx>=2.1.0",
    "pathos>=0.3.3",
    "pandas>=2.2.3",
    "tqdm>=4.66.5",
    "lzstring>=1.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.0.0",
    "hatch>=1.8.0",
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings>=0.19.0",
    "mkdocs-redirects>=0.3.0",
    "watchdog>=2.1.0",
    "pyfastx>=2.1.0",
    "pathos>=0.3.3",
]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/snipe-bio/snipe"
Repository = "https://github.com/snipe-bio/snipe"
Bug_Tracker = "https://github.com/snipe-bio/snipe/issues"


[project.scripts]
snipe = "snipe.cli.main:cli"


[tool.hatch.version]
path = "src/snipe/__init__.py"

[tool.hatch.envs.hatch-build]
installer = "uv"

[tool.ruff]
select = ["E", "F", "B"]
ignore = ["E501"]
unfixable = ["B"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
"**/tests/*" = ["E402"]

[tool.ruff.format]
quote-style = "single"

[tool.isort]
extend_skip = [".md", ".json"]
skip_glob = ["docs/*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.hatch.envs.default]
dependencies = [
    "requests>=2.25.1",
    "click>=8.1.7",
    "sourmash>=4.8.11",
    "pytest>=8.3.3",
    "numpy",
    "pyfastx>=2.1.0",
    "pathos>=0.3.3",
    "pandas",
    "tqdm>=4.66.5",
    "lzstring>=1.0.4",
    "ruff",
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.26.1",
    "mkdocs-redirects>=1.2.1",
    "mkdocs-material>=9.5.35",
    "mkdocstrings-python>=1.11.1",
    "mkdocs-jupyter",
    "mkdocs-git-authors-plugin",
    "mkdocs-git-revision-date-localized-plugin",
]

[tool.hatch.envs.default.scripts]
install = "pip install -e ."
test = "pytest"
lint = "ruff check ."
format = "ruff format ."
docs-build = "mkdocs build --config-file=docs/mkdocs.yml"
docs-serve = "mkdocs serve --config-file=docs/mkdocs.yml"

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.26.1",
    "mkdocs-redirects>=1.2.1",
    "watchdog>=5.0.3",
    "mkdocs-material>=9.5.35",
    "mkdocstrings-python>=1.11.1",
    "mkdocs-jupyter>=0.25.0",
    "mkdocs-git-authors-plugin>=0.1.0",
    "mkdocs-git-committers-plugin-2>=0.1.0",
    "mkdocs-glightbox>=0.1.0",
    "mkdocs-git-revision-date-localized-plugin>=0.1.0",
    "mkdocs-jupyter>=0.25.0",
]
[tool.hatch.envs.docs.scripts]
build = "mkdocs build --config-file=docs/mkdocs.yml"
serve = "mkdocs serve"
watch = "mkdocs serve --dev-addr=0.0.0.0:8000"

[tool.hatch.build]
packages = ["src/snipe"]

[tool.hatch.build.targets.sdist]
include = ["README.md", "LICENSE.txt", "pyproject.toml", "src/snipe/**"]

[tool.hatch.build.targets.wheel]
include = ["README.md", "LICENSE.txt", "pyproject.toml", "src/snipe/**"]

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]
